--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,3 +25,5 @@ serde_json = "1"
 tauri-plugin-dialog = "2"
 tauri-plugin-clipboard-manager = "2.2.0"
 tauri-plugin-fs = "2"
+readable = { version = "0.16.0"}
+chrono = "0.4"
